# parallelism

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/api_reference/: index.rst  scheduled_task.rst  task_scheduler.rst
parallelism/: __init__.py  api_reference.py  config.py  logger.py
parallelism/core/: raise_exception.py  return_value.py  scheduled_task.py  scheduler_result.py  task_scheduler.py
parallelism/core/exceptions/: dependency_error.py  resource_error.py  worker_error.py
parallelism/core/executors/: process_executor.py  thread_executor.py
parallelism/core/handlers/: dependency_handler.py  error_handler.py  function_handler.py  parameters_handler.py  resource_handler.py  shared_memory_handler.py  worker_handler.py
