[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'parallelism'
description = 'Enhance Parallel Task Execution'
readme = 'README.md'
license = {text = 'MIT'}
authors = [{name = 'Idan Hazan'}]
keywords= ['parallelism', 'parallel', 'scheduled', 'task', 'scheduler']
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = '>= 3.8'
dynamic = ['version']

[project.urls]
homepage = 'https://github.com/idanhazan/parallelism'
repository = 'https://github.com/idanhazan/parallelism'
documentation = 'https://parallelism.readthedocs.io'

[tool.setuptools]
packages = ['parallelism']

[tool.setuptools.dynamic.version]
attr = 'parallelism.__version__'
